--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="./asset/css/main.css">
 </head>
 <body>
+    <div class="container">
+        <div class="parent">
+            <div class="child">
+                
+            </div>
+            <div class="child">
+
+            </div>
+            <div class="child">
+
+            </div>
+            <div class="child">
+
+            </div>
+        </div>
+    </div>
     <script src="/weather-app/asset/js/main.js"></script>
 </body>
 </html>
