--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -10,9 +10,12 @@
     <div class="container">
         <div class="parent">
             <div class="child">
-                
+                <input type="text" class="input-num">
             </div>
             <div class="child">
+                <ul class="list-array">
+                    
+                </ul>
 
             </div>
             <div class="child">
