--- a/searchAJAX/index.html
+++ b/searchAJAX/index.html
@@ -1,14 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./asset/css/main.css">
+    
 </head>
-<body>
-    <canvas class="draw"></canvas>
-    <input class="color" type="color" value="black" name="color">
-    <input type="range" min="10" max="200" value="10" class="width">
+<body> 
+    <form class="search-form">
+        <input type="text" class="search" placeholder="City or State">     
+        <ul class="list-array"></ul>
+    </form>
+    
     <script src="./asset/js/main.js"></script>
 </body>
 </html>
+
+
+
